update discovery service for frontend